@@ -1,4 +1,4 @@
-# $Revision: 1.4 $$Date: 2003/03/18 16:00:10 $$Author: wsnyder $
+# $Revision: 1.5 $$Date: 2003/07/03 15:06:37 $$Author: wsnyder $
 # Author: Wilson Snyder <wsnyder@wsnyder.org>
 ######################################################################
 #
@@ -20,7 +20,7 @@
 
 package P4::C4::Cache;
 
-$VERSION = '2.010';
+$VERSION = '2.020';
 
 ######################################################################
 ######################################################################
