@@ -1,4 +1,4 @@
-# $Revision: 1.12 $$Date: 2003/03/18 16:03:05 $$Author: wsnyder $
+# $Revision: 1.13 $$Date: 2003/07/03 15:06:37 $$Author: wsnyder $
 # Author: Wilson Snyder <wsnyder@wsnyder.org>
 ######################################################################
 #
@@ -21,7 +21,7 @@
 package P4::C4::Update;
 use strict;
 
-our $VERSION = '2.010';
+our $VERSION = '2.020';
 
 ######################################################################
 ######################################################################
